# adaptive-search

./: CMakeLists.txt  INSTALL  NEWS  README
Cmake/: ASDefaultBuildTypes.cmake  CheckCCompiler.cmake  CheckCCompilerConst.c  CheckCCompilerInline.c  ConfigureCCompiler.cmake  DisplaySummary.cmake
doc/: Makefile  README  common.tex  copyright.tex  cover.tex  manual.dvi  manual.dvi.aux  manual.haux  manual.html  manual.htoc  manual.ps  manual.tex
src/: CMakeLists.txt  DISTRIB_FILES  DOPLOT  LOOKAHEAD  Makefile  Makefile.cell  PARSE-BENCH  QUERIES  README  RUN-BENCH  YC_config.sh  ad_solver.c  ad_solver.h  ad_solver_MPI.c  ad_solver_MPI.h  all-interval.c  alpha.c  benchmarks.db  benchmarks.db.schema  cap.c  cell-common.h  cell-extern.h  costas.c  langford.c  magic-square.c  main.c  main_MPI.c  main_MPI.h  no_cost_swap.c  no_cost_var.c  no_displ_sol.c  no_exec_swap.c  no_next_i.c  no_next_j.c  no_reset.c  partit.c  perfect-square.c  ppu.c  ppu.h  qap-utils.c  (+10 more)
src/RESULTS/2009.06.25-10:56/: all-interval+-I.txt  all-interval.txt  alpha+-I.txt  alpha.txt  langford+-I.txt  langford.txt  magic-square+-I.txt  magic-square.txt  partit+-I.txt  partit-nr+-I.txt  partit-nr.txt  partit.txt  perfect-square+-I.txt  perfect-square.txt  queens+-I.txt  queens.txt
src/RESULTS/2009.07.07-15:05/: all-interval+-I.txt  all-interval-350+10.txt  all-interval-350.txt  all-interval-400+10.txt  all-interval-400.txt  all-interval-p30.txt  all-interval-p40.txt  all-interval.txt  alpha+-I.txt  alpha.txt  langford+-I.txt  langford.txt  magic-square+-I.txt  magic-square.txt  partit+-I.txt  partit-nr+-I.txt  partit-nr.txt  partit.txt  perfect-square+-I.txt  perfect-square.txt  queens+-I.txt  queens.txt
src/RESULTS/2009.07.14-01:03/: all-interval.txt  magic-square.txt
src/RESULTS/2009.07.14-07:35/: magic-square.txt
src/RESULTS/2009.07.14-07:36/: partit-nr.txt  perfect-square.txt
src/RESULTS/2009.07.14-15:52/: all-interval.txt
src/RESULTS/2009.07.14-15:53/: all-interval.txt
src/RESULTS/2009.07.14-18:36/: all-interval.txt
src/RESULTS/2009.07.14-18:37/: all-interval.txt
src/RESULTS/2009.07.14-18:38/: all-interval.txt
src/RESULTS/2009.07.15-09:39/: all-interval.txt
src/RESULTS/2009.07.15-09:40/: all-interval-400.2.txt  all-interval-400.4.txt  all-interval-400.8.txt  all-interval-500.12.txt  all-interval-500.2.txt  all-interval-500.4.txt  all-interval-500.8.txt  partit-nr.txt
src/RESULTS/2009.07.16/: magic-square.txt  partit-nr.txt  perfect-square-4.txt  perfect-square.txt
src/STATS/: SPEEDUP-5.txt  SPEEDUP-6.txt  SPEEDUP-INIT-6.txt  SPEEDUP-ITERS-5.txt  SPEEDUP-ITERS-6.txt  SPEEDUP-ITERS-INIT-5.txt  STATS-4.txt  STATS-6.txt  STATS-INIT-5.txt  STATS-ITERS-5.txt  STATS-ITERS-6.txt  STATS-ITERS-INIT-6.txt
src/bench/OLD/: BENCH  BENCH-1  BENCH-RESULT-all-interval-I.txt  BENCH-RESULT-all-interval.sql  BENCH-RESULT-all-interval.txt  BENCH-RESULT-alpha-I.txt  BENCH-RESULT-alpha.sql  BENCH-RESULT-alpha.txt  BENCH-RESULT-langford-I.txt  BENCH-RESULT-langford.sql  BENCH-RESULT-langford.txt  BENCH-RESULT-magic-square-I.txt  BENCH-RESULT-magic-square.sql  BENCH-RESULT-magic-square.txt  BENCH-RESULT-partit-I.txt  BENCH-RESULT-partit-nr.sql  BENCH-RESULT-partit-nr.txt  BENCH-RESULT-partit.sql  BENCH-RESULT-partit.txt  BENCH-RESULT-perfect-square-I.txt  BENCH-RESULT-perfect-square.sql  BENCH-RESULT-perfect-square.txt  BENCH-RESULT-queens-I.txt  BENCH-RESULT-queens.sql  BENCH-RESULT-queens.txt  BENCH.sql
src/spu/: Makefile
